--- a/server/menu.html
+++ b/server/menu.html
@@ -14,8 +14,8 @@
         <div class="text-center">
             <a href="cadastro.php" class="btn btn-primary btn-lg mb-3">Cadastrar Medicamentos</a><br>
             <a href="listagem.php" class="btn btn-secondary btn-lg mb-3">Listar Medicamentos</a><br>
+            <a href="venda.php" class="btn btn-success btn-lg mb-3">Venda</a><br>
             <a href="../index.php" class="btn btn-success btn-lg mb-3">Sair</a><br>
-            <a href="venda.php" class="btn btn-success btn-lg mb-3">Sair</a><br>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
